...
		// Instantiate Stack View and add album info controls
		let stackView = UIStackView()
		stackView.axis = .vertical
		stackView.distribution = .fill
		stackView.alignment = .leading
		stackView.spacing = 16.0
		stackView.accessibilityIdentifier = "Album Stack View"
		
		stackView.addArrangedSubview(albumImageView)
		stackView.addArrangedSubview(nameLabel)
		stackView.addArrangedSubview(artistLabel)
		stackView.addArrangedSubview(genreLabel)
		stackView.addArrangedSubview(releaseLabel)
...
		stackView.translatesAutoresizingMaskIntoConstraints = false
		
		view.addSubview(stackView)
		
		// Add View in iTunes Button, placing directly on View
		let viewButton = UIButton()
		viewButton.setTitle("View in iTunes Store", for: .normal)
		viewButton.translatesAutoresizingMaskIntoConstraints = false
		viewButton.backgroundColor = .clear
		viewButton.layer.cornerRadius = 10
		viewButton.layer.backgroundColor = UIColor.systemBlue.cgColor
		viewButton.addTarget(self, action: #selector(self.viewButtonTapped), for: .touchUpInside)
		viewButton.accessibilityIdentifier = "Button to view in iTunes Store"
...
